--- a/Projects/boston_housing/boston_housing.html
+++ b/Projects/boston_housing/boston_housing.html
@@ -13439,7 +13439,7 @@ Standard deviation of prices: $165171.13154429477
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>yes, because r2 of 0.923 means that 92.3% of the variance is predicted.
-and the lower the percentage the less likely it is to predict the variance.</p>
+and the lower the percentage the less likely it is to predict the variance and most of the data will be fitted inside our model.</p>
 
 </div>
 </div>
@@ -13512,7 +13512,7 @@ and the lower the percentage the less likely it is to predict the variance.</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>to avoid overfitting of the alogrithim, because if you use the the entire data as training data the algorithim will have a high variance and memorize the training data which will make a very bad predicting algorithim.</p>
+<p>because if we use the entire data as training data, our train score will be very high and we're most likely have an overfit model and to test that we must use a test data, but we can't use the training data as testing data therefore we can't increase the performance of our model without a test data, so we need to split our data into testing and training.</p>
 
 </div>
 </div>
